--- a/paascloud-provider/paascloud-provider-uac/pom.xml
+++ b/paascloud-provider/paascloud-provider-uac/pom.xml
@@ -60,7 +60,7 @@
       <groupId>com.liuzm.paascloud.provider.api</groupId>
       <artifactId>paascloud-provider-uac-api</artifactId>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>com.liuzm.paascloud.provider.api</groupId>
       <artifactId>paascloud-provider-mdc-api</artifactId>
     </dependency>
@@ -72,7 +72,7 @@
       <groupId>com.liuzm.paascloud.provider.api</groupId>
       <artifactId>paascloud-provider-opc-api</artifactId>
       <version>1.0</version>
-    </dependency>
+    </dependency>-->
     <!-- https://mvnrepository.com/artifact/org.apache.rocketmq/rocketmq-client -->
     <dependency>
       <groupId>org.apache.rocketmq</groupId>
