--- a/paascloud-generator/pom.xml
+++ b/paascloud-generator/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.0.18</version>
+            <version>${druid.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.pagehelper</groupId>
