--- a/paascloud-provider/pom.xml
+++ b/paascloud-provider/pom.xml
@@ -176,7 +176,7 @@
                 </dependencies>
             </plugin>
             <!-- 添加docker-maven插件 -->
-            <plugin>
+            <!--<plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>0.4.13</version>
@@ -192,7 +192,7 @@
                         </resource>
                     </resources>
                 </configuration>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 </project>
