--- a/paascloud-generator/paascloud-generator-uac/src/main/resources/config.properties
+++ b/paascloud-generator/paascloud-generator-uac/src/main/resources/config.properties
@@ -5,4 +5,4 @@ jdbc.password = 123456
 
 generator.plugin = tk.mybatis.mapper.generator.MapperPlugin
 #generator.Mapper = tk.mybatis.mapper.common.Mapper
-generator.Mapper = com.paascloud.core.mybatis.MyMapper
+generator.Mapper =com.paascloud.base.mybatis.MyMapper
