--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
     <modelmapper.version>1.1.2</modelmapper.version>
     <!--<rocketmq.version>4.1.0-incubating</rocketmq.version>-->
     <rocketmq.version>4.2.0</rocketmq.version>
+    <pagehelper.version>5.1.4</pagehelper.version>
 
     <docker-maven.version>1.0.0</docker-maven.version>
   </properties>
@@ -220,6 +221,11 @@
         <groupId>com.github.pagehelper</groupId>
         <artifactId>pagehelper-spring-boot-starter</artifactId>
         <version>1.1.2</version>
+      </dependency>
+      <dependency>
+        <groupId>com.github.pagehelper</groupId>
+        <artifactId>pagehelper</artifactId>
+        <version>${pagehelper.version}</version>
       </dependency>
       <dependency>
         <groupId>com.alibaba</groupId>
