--- a/paascloud-generator/pom.xml
+++ b/paascloud-generator/pom.xml
@@ -70,6 +70,14 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>config/*.properties</exclude>
+                </excludes>
+            </resource>
+        </resources>
         <plugins>
             <!-- mybatis逆向工程插件 -->
             <plugin>
